<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">涂鸦</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="brush_large">粗</string>
    <string name="brush_medium">中</string>
    <string name="brush_small">细</string>
    <string name="btn_scrawl">Go Scrawl</string>
    <string name="btn_dot">Go Dot</string>
    <string name="draw_line">绘线</string>
    <string name="color_line">颜色线</string>
    <string name="title_activity_path">PathActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrawl">ScrawlActivity</string>
    <string name="title_activity_draw_line">DrawLineActivity</string>
    <string name="title_activity_color_line">ColorLineActivity</string>
    <string name="title_activity_self_layout">SelfLayoutActivity</string>
    <string name="title_activity_rgbatexture">RGBATextureActivity</string>
    <string name="openning_push_service">正在开启报警推送服务</string>
    <string name="closing_push_service">正在关闭报警推送服务</string>
    <string name="title_activity_contente_resolver">ContenteResolverActivity</string>

</resources>
